; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_ez/keymaps/heartrobotninja/extr_keymap.c_ccopy.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_ez/keymaps/heartrobotninja/extr_keymap.c_ccopy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@KC_LCTL = common dso_local global i32 0, align 4
@KC_X = common dso_local global i32 0, align 4
@KC_C = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ccopy(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp sgt i32 %7, 1
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load i32, i32* @KC_LCTL, align 4
  %11 = call i32 @register_code(i32 %10)
  %12 = load i32, i32* @KC_X, align 4
  %13 = call i32 @register_code(i32 %12)
  %14 = load i32, i32* @KC_X, align 4
  %15 = call i32 @unregister_code(i32 %14)
  %16 = load i32, i32* @KC_LCTL, align 4
  %17 = call i32 @unregister_code(i32 %16)
  br label %27

18:                                               ; preds = %2
  %19 = load i32, i32* @KC_LCTL, align 4
  %20 = call i32 @register_code(i32 %19)
  %21 = load i32, i32* @KC_C, align 4
  %22 = call i32 @register_code(i32 %21)
  %23 = load i32, i32* @KC_C, align 4
  %24 = call i32 @unregister_code(i32 %23)
  %25 = load i32, i32* @KC_LCTL, align 4
  %26 = call i32 @unregister_code(i32 %25)
  br label %27

27:                                               ; preds = %18, %9
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %29 = call i32 @reset_tap_dance(%struct.TYPE_4__* %28)
  ret void
}

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @reset_tap_dance(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
